name:               dgs
version:            0.3
author:             Daniel Wagner
maintainer:         daniel@wagner-home.com
homepage:           http://dmwit.com/dgs
bug-reports:        http://dmwit.fogbugz.com/
synopsis:           Haskell front-end for DGS' bot interface
description:
    The Dragon Go Server exposes a convenient interface for bots.  This module
    provides some functions for accessing that interface to log in to the
    server, retrieve your status page, retrieve the state of any games you are
    playing, and make moves in games.
category:           Game, Network, Web
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
build-type:         Simple

library
    exposed-modules:
                    Network.DGS,
                    Network.DGS.Bulletin,
                    Network.DGS.Errors,
                    Network.DGS.Game,
                    Network.DGS.Message,
                    Network.DGS.Misc,
                    Network.DGS.Monad,
                    Network.DGS.Status,
                    Network.DGS.Status.Bulletin,
                    Network.DGS.Status.Game,
                    Network.DGS.Status.Message,
                    Network.DGS.Status.MultiplayerGame,
                    Network.DGS.Time,
                    Network.DGS.User

    other-modules:
                    Network.DGS.Atto
                    Network.DGS.Status.Imports

    build-depends:
                    aeson,
                    attoparsec,
                    base >= 3 && < 5,
                    bytestring,
                    conduit,
                    http-conduit,
                    http-types >= 0.7,
                    transformers-base,
                    monad-control,
                    mtl >= 1.1,
                    network,
                    old-locale,
                    sgf,
                    split,
                    text,
                    time,
                    unordered-containers

source-repository head
    type:       git
    location:   https://github.com/dmwit/dgs.git

source-repository this
    type:       git
    location:   https://github.com/dmwit/dgs.git
    tag:        0.3
